--- a/timer.html
+++ b/timer.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: skyblue; /* Set background color to black */
-            color: white; /* Set text color to white for better visibility */
+            background-color: skyblue;
+            color: white; 
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -64,9 +64,9 @@
             clearInterval(interval);
         }
         function restartTimer() {
-            stopTimer(); // Stop the timer if it's running
-            seconds = 0; // Reset seconds to zero
-            updateDigitalTimer(); // Update the display to show 00:00
+            stopTimer(); 
+            seconds = 0; 
+            updateDigitalTimer();
         }
     </script>
     
